--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cloudy-north",
+   "id": "assumed-school",
    "metadata": {},
    "source": [
     "# Example: differential network analysis"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satellite-fault",
+   "id": "activated-atlantic",
    "metadata": {},
    "source": [
     "## Preamble\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "structured-orientation",
+   "id": "confused-jewel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "noted-performance",
+   "id": "bright-emergency",
    "metadata": {},
    "source": [
     "## Generate data matrix X (can be skipped if csv file is already available)"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "written-sodium",
+   "id": "convinced-candy",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conventional-chicago",
+   "id": "beneficial-ireland",
    "metadata": {},
    "source": [
     "## Read data matrix from file directly"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sorted-mounting",
+   "id": "nuclear-alcohol",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "requested-aquarium",
+   "id": "advanced-brunei",
    "metadata": {},
    "source": [
     "## Perform differential network analysis"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "considered-pakistan",
+   "id": "experienced-whale",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "driven-completion",
+   "id": "searching-facial",
    "metadata": {},
    "outputs": [
     {
@@ -163,13 +163,14 @@
    "source": [
     "t = time.time()\n",
     "# for a quicker test run, may set nodes = [0, 133, 180] as a parameter of differentialNetworkAnalysis()\n",
+    "# change nodes = None to run for all nodes\n",
     "result = differentialNetworkAnalysis(X1, X2, nodes = [0, 133, 180], num_partners=8, trace=True)\n",
     "print('{} seconds elapsed.'.format(time.time() - t))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "developmental-detective",
+   "id": "russian-lawyer",
    "metadata": {},
    "source": [
     "## tidy up results using gene names instead of indices"
@@ -178,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "municipal-success",
+   "id": "another-grade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "latest-cincinnati",
+   "id": "sized-meaning",
    "metadata": {},
    "outputs": [
     {
