--- a/python/example.ipynb
+++ b/python/example.ipynb
@@ -58,7 +58,7 @@
    ],
    "source": [
     "from os.path import exists\n",
-    "if not exists('CD4_TREG_in_thymus.csv.gz'):\n",
+    "if not exists('../data/CD4_TREG_in_thymus.csv.gz'):\n",
     "    import scanpy as sc\n",
     "    adata = sc.read('NKT_thymus_panfetal.h5ad')\n",
     "    adata = adata[adata.obs['anno_lvl_2_final_clean'].isin(['CD4+T','TREG'])]\n",
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "dat = pd.read_csv('CD4_TREG_in_thymus.csv.gz', index_col=0)\n",
+    "dat = pd.read_csv('../data/CD4_TREG_in_thymus.csv.gz', index_col=0)\n",
     "X = np.array(dat.iloc[:,1:])\n",
     "gene_names = np.array(dat.columns[1:])\n",
     "CD4_filter = dat['anno_lvl_2_final_clean'] == 'CD4+T'\n",
