--- a/python/example.ipynb
+++ b/python/example.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "confused-jewel",
    "metadata": {},
    "outputs": [],
@@ -43,22 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "convinced-candy",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/pandas/core/arrays/categorical.py:2487: FutureWarning: The `inplace` parameter in pandas.Categorical.remove_unused_categories is deprecated and will be removed in a future version.\n",
-      "  res = method(*args, **kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from os.path import exists\n",
-    "if not exists('../data/CD4_TREG_in_thymus.csv.gz'):\n",
+    "if not exists('CD4_TREG_in_thymus.csv.gz'):\n",
     "    import scanpy as sc\n",
     "    adata = sc.read('NKT_thymus_panfetal.h5ad')\n",
     "    adata = adata[adata.obs['anno_lvl_2_final_clean'].isin(['CD4+T','TREG'])]\n",
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "nuclear-alcohol",
    "metadata": {},
    "outputs": [
@@ -99,13 +90,13 @@
        "(7816, 4123)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dat = pd.read_csv('../data/CD4_TREG_in_thymus.csv.gz', index_col=0)\n",
+    "dat = pd.read_csv('CD4_TREG_in_thymus.csv.gz', index_col=0)\n",
     "X = np.array(dat.iloc[:,1:])\n",
     "gene_names = np.array(dat.columns[1:])\n",
     "CD4_filter = dat['anno_lvl_2_final_clean'] == 'CD4+T'\n",
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "experienced-whale",
    "metadata": {},
    "outputs": [
@@ -132,7 +123,7 @@
        "'X1 shape = (4852, 4123), X2 shape = (2964, 4123)'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "searching-facial",
    "metadata": {},
    "outputs": [
@@ -156,7 +147,7 @@
       "Computing complementary sketches...\n",
       "Computing 3/3 node...\n",
       "Finished: 2 significant node found.\n",
-      "55.70351457595825 seconds elapsed.\n"
+      "23.012622594833374 seconds elapsed.\n"
      ]
     }
    ],
@@ -178,19 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "another-grade",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = result.loc[result['test_result'] == 1, :]\n",
-    "result.index = np.array(gene_names)[result.index]\n",
-    "result['interacting_partners'] = [gene_names[v] for v in result['interacting_partners']]"
+    "result_identified = result.loc[result['test_result'] == 1, :]\n",
+    "result_identified.index = np.array(gene_names)[result_identified.index]\n",
+    "result_identified.insert(len(result_identified.columns), 'interacting_genes', [gene_names[v] for v in result_identified['interacting_partners']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "sized-meaning",
    "metadata": {},
    "outputs": [
@@ -218,6 +209,7 @@
        "      <th>test_stat</th>\n",
        "      <th>test_result</th>\n",
        "      <th>interacting_partners</th>\n",
+       "      <th>interacting_genes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -225,12 +217,14 @@
        "      <th>IKZF2</th>\n",
        "      <td>72.240301</td>\n",
        "      <td>1</td>\n",
+       "      <td>[3907, 3996, 3974, 1926, 441, 3211, 3314, 3866]</td>\n",
        "      <td>[MT-ND4L, HLA-B, MT-ATP8, ETS1, FYB1, JUNB, RN...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FOXP3</th>\n",
        "      <td>297.40523</td>\n",
        "      <td>1</td>\n",
+       "      <td>[3907, 3974, 3692, 2556, 3250, 1048, 1290, 3744]</td>\n",
        "      <td>[MT-ND4L, MT-ATP8, S100A4, CD96, ISG20, BIRC2,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -242,24 +236,65 @@
        "IKZF2  72.240301           1   \n",
        "FOXP3  297.40523           1   \n",
        "\n",
-       "                                    interacting_partners  \n",
+       "                                   interacting_partners  \\\n",
+       "IKZF2   [3907, 3996, 3974, 1926, 441, 3211, 3314, 3866]   \n",
+       "FOXP3  [3907, 3974, 3692, 2556, 3250, 1048, 1290, 3744]   \n",
+       "\n",
+       "                                       interacting_genes  \n",
        "IKZF2  [MT-ND4L, HLA-B, MT-ATP8, ETS1, FYB1, JUNB, RN...  \n",
        "FOXP3  [MT-ND4L, MT-ATP8, S100A4, CD96, ISG20, BIRC2,...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "result_identified"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "58373df2-948a-452b-9a5a-5773391f6580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DGE(x1, x2, alpha):\n",
+    "    pvals = [sp.stats.mannwhitneyu(x1[:,j], x2[:,j])[1] for j in range(x1.shape[1])]\n",
+    "    return np.where(np.array(pvals) < alpha, 1,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "58368c0a-c8e1-426b-895a-9b54916d7b0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'resutl_identified' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m result_identified\n\u001b[0;32m      3\u001b[0m result_identified\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minteracting_partners\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mresutl_identified\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'resutl_identified' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "result_identified.insert(len(result_identified.columns),'DGE', [DGE(X1[:,v], X2[:,v], 0.05 / X1.shape[1]) for v in result_identified['interacting_partners']])\n",
+    "result_identified\n",
+    "result_identified.pop('interacting_partners')\n",
+    "resu_identified"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
