python files minor changes

--- a/python/example.ipynb
+++ b/python/example.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "confused-jewel",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "searching-facial",
    "metadata": {},
    "outputs": [
@@ -145,9 +145,9 @@
      "output_type": "stream",
      "text": [
       "Computing complementary sketches...\n",
-      "Computing 3/3 node...\n",
-      "Finished: 2 significant node found.\n",
-      "23.012622594833374 seconds elapsed.\n"
+      "Computing 1/1 node...\n",
+      "Finished: 1 significant node found.\n",
+      "18.644014835357666 seconds elapsed.\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
     "t = time.time()\n",
     "# for a quicker test run, may set nodes = [0, 133, 180] as a parameter of differentialNetworkAnalysis()\n",
     "# change nodes = None to run for all nodes\n",
-    "result = differentialNetworkAnalysis(X1, X2, nodes = [0, 133, 180], num_partners=8, trace=True)\n",
+    "result = differentialNetworkAnalysis(X1, X2, nodes = [2821], num_partners=8, trace=True)\n",
     "print('{} seconds elapsed.'.format(time.time() - t))"
    ]
   },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "another-grade",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "sized-meaning",
    "metadata": {},
    "outputs": [
@@ -214,38 +214,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>IKZF2</th>\n",
-       "      <td>72.240301</td>\n",
+       "      <th>CTLA4</th>\n",
+       "      <td>45.370989</td>\n",
        "      <td>1</td>\n",
-       "      <td>[3907, 3996, 3974, 1926, 441, 3211, 3314, 3866]</td>\n",
-       "      <td>[MT-ND4L, HLA-B, MT-ATP8, ETS1, FYB1, JUNB, RN...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FOXP3</th>\n",
-       "      <td>297.40523</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[3907, 3974, 3692, 2556, 3250, 1048, 1290, 3744]</td>\n",
-       "      <td>[MT-ND4L, MT-ATP8, S100A4, CD96, ISG20, BIRC2,...</td>\n",
+       "      <td>[534, 2768, 1558, 3607, 2909, 3099, 1725, 1499]</td>\n",
+       "      <td>[RGS1, GBP2, RPS10, ZFP36L1, TAGAP, STAT3, RPS...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       test_stat test_result  \\\n",
-       "IKZF2  72.240301           1   \n",
-       "FOXP3  297.40523           1   \n",
-       "\n",
-       "                                   interacting_partners  \\\n",
-       "IKZF2   [3907, 3996, 3974, 1926, 441, 3211, 3314, 3866]   \n",
-       "FOXP3  [3907, 3974, 3692, 2556, 3250, 1048, 1290, 3744]   \n",
+       "       test_stat test_result                             interacting_partners  \\\n",
+       "CTLA4  45.370989           1  [534, 2768, 1558, 3607, 2909, 3099, 1725, 1499]   \n",
        "\n",
        "                                       interacting_genes  \n",
-       "IKZF2  [MT-ND4L, HLA-B, MT-ATP8, ETS1, FYB1, JUNB, RN...  \n",
-       "FOXP3  [MT-ND4L, MT-ATP8, S100A4, CD96, ISG20, BIRC2,...  "
+       "CTLA4  [RGS1, GBP2, RPS10, ZFP36L1, TAGAP, STAT3, RPS...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,27 +255,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "58368c0a-c8e1-426b-895a-9b54916d7b0a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'resutl_identified' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m result_identified\n\u001b[0;32m      3\u001b[0m result_identified\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minteracting_partners\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mresutl_identified\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'resutl_identified' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test_stat</th>\n",
+       "      <th>test_result</th>\n",
+       "      <th>interacting_genes</th>\n",
+       "      <th>DGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>IKZF2</th>\n",
+       "      <td>72.240301</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[MT-ND4L, HLA-B, MT-ATP8, ETS1, FYB1, JUNB, RN...</td>\n",
+       "      <td>[0, 1, 0, 1, 1, 1, 0, 1]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FOXP3</th>\n",
+       "      <td>297.40523</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[MT-ND4L, MT-ATP8, S100A4, CD96, ISG20, BIRC2,...</td>\n",
+       "      <td>[0, 0, 1, 1, 1, 0, 1, 1]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       test_stat test_result  \\\n",
+       "IKZF2  72.240301           1   \n",
+       "FOXP3  297.40523           1   \n",
+       "\n",
+       "                                       interacting_genes  \\\n",
+       "IKZF2  [MT-ND4L, HLA-B, MT-ATP8, ETS1, FYB1, JUNB, RN...   \n",
+       "FOXP3  [MT-ND4L, MT-ATP8, S100A4, CD96, ISG20, BIRC2,...   \n",
+       "\n",
+       "                            DGE  \n",
+       "IKZF2  [0, 1, 0, 1, 1, 1, 0, 1]  \n",
+       "FOXP3  [0, 0, 1, 1, 1, 0, 1, 1]  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "result_identified.insert(len(result_identified.columns),'DGE', [DGE(X1[:,v], X2[:,v], 0.05 / X1.shape[1]) for v in result_identified['interacting_partners']])\n",
     "result_identified\n",
     "result_identified.pop('interacting_partners')\n",
-    "resu_identified"
+    "result_identified"
    ]
   }
  ],
